--- a/package.json
+++ b/package.json
@@ -13,6 +13,14 @@
   "license": "MIT",
   "dependencies": {
     "lodash": "^2.4.1",
-    "tape": "^2.12.3"
+    "tape": "^2.12.3",
+    "express": "^4.1.0",
+    "ecstatic": "^0.5.1",
+    "jade": "^1.3.1",
+    "grunt-contrib-watch": "^0.5.3",
+    "handlebars": "^1.3.0",
+    "ember-template-compiler": "^1.5.0-beta.3",
+    "grunt-ember-templates": "^0.4.19",
+    "grunt": "^0.4.4"
   }
 }
