--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "handlebars": "^1.3.0",
     "ember-template-compiler": "^1.5.0-beta.3",
     "grunt-ember-templates": "^0.4.19",
-    "grunt": "^0.4.4"
+    "grunt": "^0.4.4",
+    "browserify": "^3.44.2",
+    "grunt-browserify": "^2.0.8"
   }
 }
