--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "grunt": "^0.4.4",
     "browserify": "^3.44.2",
     "grunt-browserify": "^2.0.8",
-    "grunt-contrib-less": "^0.11.0"
+    "grunt-contrib-less": "^0.11.0",
+    "reactify": "^0.13.1"
   }
 }
