--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "browserify": "^3.44.2",
     "grunt-browserify": "^2.0.8",
     "grunt-contrib-less": "^0.11.0",
-    "reactify": "^0.13.1"
+    "reactify": "^0.13.1",
+    "node-uuid": "^1.4.1"
   }
 }
