--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "components",
-  "version": "0.0.0",
+  "version": "0.0.0-1",
   "description": "Example project of building components using a functional framework agnostic style",
   "main": "server.js",
   "scripts": {
-    "test": "node test.js"
+    "test": "node test.js",
+    "start": "node server.js"
   },
   "keywords": [
     "components"
@@ -13,20 +13,27 @@
   "license": "MIT",
   "dependencies": {
     "lodash": "^2.4.1",
-    "tape": "^2.12.3",
     "express": "^4.1.0",
     "ecstatic": "^0.5.1",
     "jade": "^1.3.1",
-    "grunt-contrib-watch": "^0.5.3",
     "handlebars": "^1.3.0",
-    "ember-template-compiler": "^1.5.0-beta.3",
-    "grunt-ember-templates": "^0.4.19",
-    "grunt": "^0.4.4",
-    "browserify": "^3.44.2",
-    "grunt-browserify": "^2.0.8",
-    "grunt-contrib-less": "^0.11.0",
-    "reactify": "^0.13.1",
     "node-uuid": "^1.4.1",
     "async": "^0.8.0"
+  },
+  "engines": {
+    "node": "0.10.x"
+  },
+  "name": "example-components",
+  "subdomain": "example-components",
+  "devDependencies": {
+    "ember-template-compiler": "^1.6.0-beta.5",
+    "grunt-ember-templates": "^0.4.21",
+    "tape": "^2.13.1",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt": "^0.4.5",
+    "reactify": "^0.13.1",
+    "grunt-contrib-less": "^0.11.1",
+    "browserify": "^4.1.6",
+    "grunt-browserify": "^2.1.0"
   }
 }
